<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rent_request_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_200"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="@style/Theme.Music_store"></androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@color/purple_200"
                            android:padding="10dp"
                            android:text="@string/rental_request_screen_titel"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="156dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/rental_request_screen_instument_id"
                                android:textAlignment="viewStart"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="TextView" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView13"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/rental_request_screen_coustomer"
                                android:textAlignment="viewStart"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="TextView" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView15"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/rental_request_screen_contact"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/editTextTextPersonName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:inputType="textPersonName" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/rental_request_screen_request_date"
                                android:textAlignment="viewStart"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/editTextTextPersonName2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:inputType="textPersonName" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView17"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/rental_request_screen_days"
                                android:textAlignment="viewStart"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/editTextTextPersonName3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:inputType="textPersonName" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/button_background"
                            android:padding="10dp"
                            android:text="@string/rental_request_screen_btn_text"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_background"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rental_request_screen_description"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>